# cm-api

./: .gitignore  Cargo.toml  _debug_content.html  dprint.json  main.py  out.html  requirements.txt  res.html  rustfmt.toml
src/: error.rs  main.rs  response.rs  utils.rs
src/ctx/: mod.rs
src/model/: mod.rs  video.rs
src/service/: get_info.rs  get_movies.rs  mod.rs  search_movies.rs
src/service/auth/: mod.rs
src/tests/: mod.rs
src/web/: mod.rs  movie_routes.rs  mw_auth.rs  mw_response_mapper.rs  video_routes.rs
tests/: fetch_movies.rs
www/: index.html  package.json  pnpm-lock.yaml
www/js/: script.js
www/src/: App.tsx
www/src/service/movies/: index.ts
