[package]
name = "cm-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
reqwest = "0.12.4"
scraper = "0.19.0"
serde = { version = "1.0.202", features = ["derive"] }
shuttle-axum = "0.44.0"
shuttle-runtime = "0.44.0"
tokio = { version = "1.28.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
