[package]
name = "cm-api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
axum = "0.7"
reqwest = "0.12.4"
scraper = "0.19.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
shuttle-axum = "0.44.0"
shuttle-runtime = "0.44.0"
tokio = { version = "1.28.2", features = ["full"] }
tower-cookies = "0.10"
tower-http = { version = "0.5.2", features = ["cors"] }
